src/components/HeroSlider/hero-slider.scss
@import '../../styles/mixins/mixins';
@import '../../styles/base/base';

$_transparent: transparent;

.hero {
    display: grid;
    grid-template-columns: 70% 30%;
    grid-template-rows: 320px;

    &__desc-wrap {
        -webkit-box-orient: vertical;
        color: $color-grey-6;
        display: -webkit-box;
        height: 101px;
        -webkit-line-clamp: 4;
        margin: 16px 0;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    &__info-wrap {
        height: 232px;
        overflow: hidden;
    }

    &__title {
        line-height: 37px;
    }

    &__slides {
        position: relative;

        &::after {
            background-image: linear-gradient(
                90deg,
                rgba(255, 255, 255, 0) 0%,
                $color-white 100%
            );
            content: '';
            display: block;
            height: 100%;
            position: absolute;
            width: 100%;
        }
    }

    &__content {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 40px;
        padding: 24px;
    }

    &__info {
        grid-column: 1 / 3;
        grid-row: 2 / 3;
        overflow: hidden;
    }

    &__pagination-container {
        align-items: center;
        display: flex;
        height: 20px;
        //overflow: hidden;
    }

    &__pagination {
        border-radius: 50%;
        cursor: pointer;
        height: 6px;
        justify-self: start;
        margin: 5px;
        width: 6px;

        &--default {
            background-color: $color-silver;
            border: 0;
            padding: 0;
        }

        &--choosed {
            background-color: $color-red;
            height: 8px;
            width: 8px;
        }
    }

    &__nav {
        justify-self: end;
    }
}

@media only screen and (max-width: 1024px) {
    .hero {
        grid-template-columns: 60% 40%;
    }
}

@media only screen and (max-width: 716px) {
    .hero {
        grid-template-columns: 50% 50%;
    }
}

@media only screen and (max-width: 577px) {
    .hero {
        &__content {
            grid-template-columns: 1fr;
            grid-template-rows: 25px;
        }

        &__nav {
            grid-row: 2 / 3;
            justify-self: start;
            padding: 6px 0;
        }

        &__pagination-container {
            justify-self: start;
        }

        &__label {
            margin: 12px 0;
        }

        &__info {
            grid-row: 3 / 4;
        }

        &__desc-wrap {
            height: 95px;
            margin: 0 0 16px;
        }
    }
}

@media only screen and (max-width: 543px) {
    .hero__desc-wrap {
        margin: 0 0 10px;
    }

    .button--slider {
        height: 47px;
    }
}

